# Caminho-dos-pes

./: .coverage  .env  anamnese_data.json  db.sqlite3  pyproject.toml
.github/workflows/: django.yml
apps/anamnese/: admin.py  apps.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/anamnese/migrations/: 0001_initial.py  0002_alter_anamnesemodel_diabetico_and_more.py  0003_alter_anamnesemodel_options_anamnesemodel_data.py  0004_alter_anamnesemodel_data.py  0005_alter_anamnesemodel_data.py  0006_rename_alergico_anamnesemodel_alergia_and_more.py  0007_alter_anamnesemodel_data_alter_anamnesemodel_table.py  0008_alter_anamnesemodel_acompanhamento_medico_and_more.py
apps/anamnese/tests/: test_model.py  tests_api.py  tests_views.py
apps/anamnese/views/: api.py
apps/autenticacao/: models.py  serializers.py  urls.py  views.py
apps/autenticacao/forms/: criar_user_form.py  editar_user_form.py
apps/autenticacao/migrations/: 0001_initial.py  0002_delete_usuariomodel_usuariomodel.py
apps/autenticacao/tests/: tests_api.py  tests_model.py  tests_views.py
apps/base/: urls.py  views.py
apps/despesas/: apps.py  models.py  serializers.py  urls.py  views.py
apps/pacientes/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/utils/: barra_de_progresso.py  criar_anamneses_fake.py  criar_despesas.py  criar_pacientes_fake.py  criar_vendas_fake.py  meios_de_pagamento.py  package.json  permissoes.py
apps/vendas/: admin.py  models.py  serializers.py  urls.py  views.py
caminho_dos_pes/: asgi.py  settings.py  urls.py  wsgi.py
templates/: 403.html  form.html  index.html
templates/anamnese/: deletar_anamnese.html  detalhes_anamnese.html  form_anamnese.html  lista_de_anamneses.html
templates/autenticacao/: deletar_usuario.html  detalhes_usuario.html  form_autenticacao.html  lista_autenticacao.html  login.html
templates/base/: index.html
templates/despesas/: deletar_despesa.html  detalhes_despesa.html  form_despesa.html  lista_de_despesas.html
templates/pacientes/: deletar_paciente.html  detalhes_paciente.html  lista_de_pacientes.html
templates/partials/: _alertas.html  _base.html
templates/vendas/: deletar_venda.html  detalhes_venda.html  form_venda.html  lista_de_vendas.html
(+27 files in other folders)
